[gd_scene load_steps=15 format=2]

[ext_resource path="res://esercizi/esercizio1/Personaggio.gd" type="Script" id=1]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/attacco/gatto1.png" type="Texture" id=2]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/attacco/gatto2.png" type="Texture" id=3]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/attacco/gatto3.png" type="Texture" id=4]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/attacco/gatto5.png" type="Texture" id=5]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/attacco/gatto6.png" type="Texture" id=6]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto1.png" type="Texture" id=7]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto2.png" type="Texture" id=8]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto3.png" type="Texture" id=9]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto4.png" type="Texture" id=10]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto5.png" type="Texture" id=11]
[ext_resource path="res://esercizi/esercizio1/risorse/personaggio/gatto/camminata/gatto6.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9185, 15.2383 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "attacco",
"speed": 20.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "fermo",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "camminata",
"speed": 8.0
} ]

[node name="Personaggio" type="KinematicBody2D"]
position = Vector2( 6.16075, -11.5 )
scale = Vector2( 1.5, 1.8 )
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Animazioni" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "fermo"

[node name="Rinasci" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PuntoAttacco" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[connection signal="animation_finished" from="Animazioni" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Rinasci" to="." method="_on_Rinasci_timeout"]
